; ModuleID = '/home/carl/AnghaBench/RetroArch/griffin/extr_..taskstask_powerstate.c_task_push_get_powerstate.c'
source_filename = "/home/carl/AnghaBench/RetroArch/griffin/extr_..taskstask_powerstate.c_task_push_get_powerstate.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_5__ = type { i32, i32, i32, i32*, i32 }

@TASK_TYPE_NONE = common dso_local global i32 0, align 4
@task_powerstate_handler = common dso_local global i32 0, align 4
@task_powerstate_cb = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @task_push_get_powerstate() #0 {
  %1 = alloca %struct.TYPE_5__*, align 8
  %2 = alloca i32*, align 8
  %3 = call %struct.TYPE_5__* (...) @task_init()
  store %struct.TYPE_5__* %3, %struct.TYPE_5__** %1, align 8
  store i32* null, i32** %2, align 8
  %4 = load %struct.TYPE_5__*, %struct.TYPE_5__** %1, align 8
  %5 = icmp ne %struct.TYPE_5__* %4, null
  br i1 %5, label %7, label %6

6:                                                ; preds = %0
  br label %32

7:                                                ; preds = %0
  %8 = call i64 @calloc(i32 1, i32 4)
  %9 = inttoptr i64 %8 to i32*
  store i32* %9, i32** %2, align 8
  %10 = load i32*, i32** %2, align 8
  %11 = icmp ne i32* %10, null
  br i1 %11, label %15, label %12

12:                                               ; preds = %7
  %13 = load %struct.TYPE_5__*, %struct.TYPE_5__** %1, align 8
  %14 = call i32 @free(%struct.TYPE_5__* %13)
  br label %32

15:                                               ; preds = %7
  %16 = load i32, i32* @TASK_TYPE_NONE, align 4
  %17 = load %struct.TYPE_5__*, %struct.TYPE_5__** %1, align 8
  %18 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %17, i32 0, i32 4
  store i32 %16, i32* %18, align 8
  %19 = load i32*, i32** %2, align 8
  %20 = load %struct.TYPE_5__*, %struct.TYPE_5__** %1, align 8
  %21 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %20, i32 0, i32 3
  store i32* %19, i32** %21, align 8
  %22 = load i32, i32* @task_powerstate_handler, align 4
  %23 = load %struct.TYPE_5__*, %struct.TYPE_5__** %1, align 8
  %24 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %23, i32 0, i32 2
  store i32 %22, i32* %24, align 8
  %25 = load i32, i32* @task_powerstate_cb, align 4
  %26 = load %struct.TYPE_5__*, %struct.TYPE_5__** %1, align 8
  %27 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %26, i32 0, i32 1
  store i32 %25, i32* %27, align 4
  %28 = load %struct.TYPE_5__*, %struct.TYPE_5__** %1, align 8
  %29 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %28, i32 0, i32 0
  store i32 1, i32* %29, align 8
  %30 = load %struct.TYPE_5__*, %struct.TYPE_5__** %1, align 8
  %31 = call i32 @task_queue_push(%struct.TYPE_5__* %30)
  br label %32

32:                                               ; preds = %15, %12, %6
  ret void
}

declare dso_local %struct.TYPE_5__* @task_init(...) #1

declare dso_local i64 @calloc(i32, i32) #1

declare dso_local i32 @free(%struct.TYPE_5__*) #1

declare dso_local i32 @task_queue_push(%struct.TYPE_5__*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
